<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ConfigurationsActivity">

    <TextView
        android:id="@+id/tipoCalculadoraTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/text_bg"
        android:fontFamily="sans-serif-thin"
        android:padding="15dp"
        android:text="@string/tipo_da_calculadora"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tipoCalculadoraRg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipoCalculadoraTv">

        <RadioButton
            android:id="@+id/avancadoRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:padding="5pt"
            android:text="@string/avancada" />

        <RadioButton
            android:id="@+id/normalRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:padding="5pt"
            android:text="@string/basica" />
    </RadioGroup>

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="#7BB5E8"
        android:fontFamily="sans-serif-black"
        android:onClick="onClick"
        android:text="@string/salvar_mudancas"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipoCalculadoraRg" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>